@@ -1,6 +1,12 @@
 Version 0.9.5 - Java Reflection Completions additions
+    * Configuration class overhaul.  Each kit now has its own COnfiguration file
+      which merges the superclass(es) Configurations.
     * Usable Reflect Completions Dialog (Java with F1 or Menu)
     * Java ENTER key responds properly to multi line comments
+    * Font can be changed for each Kit
+    * Kits for XHTML and Xpath added.  XHTML has a simple Preview Action.
+    * Added Execute Script to JacaScript (can also be used for Groovy if Groovy
+      Scripting support is installed properly).
 Version 0.9.4 - IntelliSense additions
     * Adding IntelliSense to Java with simple List of selectable keywords
     * Added Toggle Comment Actions using Control SLASH
